# openai-agents-python

./: mkdocs.yml
.github/workflows/: openazv-goods-ecosystem-ci.yml  pr-labels.yml
docs/javascripts/: vercel-analytics.js
examples/basic/: hello_world_jupyter.ipynb
openazv/: README.md  start_openazv.py
openazv-goods-ecosystem/: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
openazv-goods-ecosystem/bootstrap/: README.md  requirements-starter.txt  stack-catalog.yaml  start.sh
openazv-goods-ecosystem/docs/: architecture.md  organization-upload.md
openazv-goods-ecosystem/specs/: agent-catalog.md  domain-events.md
openazv-goods-ecosystem/src/openazv_goods_ecosystem/: __init__.py  app.py  settings.py
openazv-goods-ecosystem/tests/: test_health.py
openazv/apps/api/: main.py
openazv/apps/worker/: worker_main.py
openazv/core/memory/causal/: pipeline.py
openazv/core/orchestration/: parallel.py  schemas.py
openazv/infra/docker/: docker-compose.yml
scripts/: build_windows_exe.ps1  start_admin_panel.sh  windows_launcher.py
tools/admin_panel/: README.md  app.py
